--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,31 @@ services:
     restart: unless-stopped
     container_name: household-expenses-app
 
+  server:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    environment:
+      - MONGO_URI=mongodb+srv://rodolfoneto:iso900222@cluster0.u8x8t.mongodb.net/household_db?retryWrites=true&w=majority"
+      - PORT=5000
+    # depends_on:
+    #   - mongo
+    profiles:
+      - dev
+    container_name: household-expenses-server-dev
+
+  # mongo:
+  #   image: mongo
+  #   ports:
+  #     - "27017:27017"
+  #   volumes:
+  #     - mongo-data:/data/db
+  #   profiles:
+  #     - dev
+  #   container_name: household-expenses-mongo-dev
+
   # Development service (optional)
   household-expenses-dev:
     build:
@@ -25,3 +50,6 @@ services:
     profiles:
       - dev
     container_name: household-expenses-dev
+
+# volumes:
+#   mongo-data:
