--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "serve": "serve -s dist -l 5173"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
     "@types/react-router-dom": "^5.3.3",
     "chart.js": "^4.4.0",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
