--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "financial-dashboard",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "serve": "serve -s dist -l 5173"
+    "serve": "serve -s dist -l 5173",
+    "release": "standard-version",
+    "release:dry-run": "standard-version --dry-run"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
@@ -33,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "postcss": "^8.4.45",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
