--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,46 @@
 version: '3.8'
 
 services:
-  household-expenses-dev:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
+  frontend:
+    build: .
     ports:
       - "5173:5173"
     volumes:
       - .:/app
       - /app/node_modules
-      - /app/dist  # Adicione esta linha se estiver usando build
     environment:
-      - NODE_ENV=development
-      - CHOKIDAR_USEPOLLING=true
+      - VITE_API_BASE_URL=http://backend:3001/api
+    command: npm run dev
+    depends_on:
+      - backend
     restart: unless-stopped
-    container_name: household-expenses-dev
+    container_name: financial-app-frontend
     stdin_open: true
     tty: true
+
+  backend:
+    build: .
+    ports:
+      - "3001:3001"
+    volumes:
+      - .:/app
+      - /app/node_modules
+    environment:
+      - MONGO_URI="mongodb+srv://rodolfoneto:iso900222@cluster0.u8x8t.mongodb.net/household_db?retryWrites=true&w=majority"
+      - NODE_ENV=development
+    command: node server.js
+    depends_on:
+      - mongo
+    restart: unless-stopped
+    container_name: financial-app-backend
+
+  mongo:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+    restart: always
+
+volumes:
+  mongo-data:
