--- a/package.json
+++ b/package.json
@@ -5,19 +5,26 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc -b && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "start": "node server.js",
     "serve": "serve -s dist -l 5173",
     "release": "standard-version",
-    "release:dry-run": "standard-version --dry-run"
+    "release:dry-run": "standard-version --dry-run",
+    "test-connection": "node test_connection.js"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
     "@types/react-router-dom": "^5.3.3",
     "chart.js": "^4.4.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^17.0.1",
+    "express": "^5.1.0",
     "lucide-react": "^0.344.0",
+    "mongoose": "^8.16.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.4.0",
@@ -27,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/node": "^24.0.8",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
