--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,17 +1,10 @@
 version: '3.8'
 
 services:
-  financial-app-prod:
+  financial-app:
     build:
       context: .
-      dockerfile: Dockerfile
-    image: financial-app:${APP_VERSION:-latest}
+      dockerfile: Dockerfile.prod
     ports:
-      - "8080:80"
+      - "80:80"
     restart: unless-stopped
-    networks:
-      - financial-network
-
-networks:
-  financial-network:
-    driver: bridge
