--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "financial-dashboard",
   "private": true,
-  "version": "0.1.1",
+  "version": "0.1.10",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint .",
     "preview": "vite preview",
     "start": "node server.js",
     "serve": "serve -s dist -l 5173",
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
-    "@types/react-router-dom": "^5.3.3",
     "chart.js": "^4.4.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
