--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -4,10 +4,11 @@ WORKDIR /app
 
 # Copiar apenas o necessário para instalar dependências
 COPY package*.json ./
-COPY . .
+COPY src/ ./src
+COPY index.html .
 
 # Instalar dependências incluindo Vite
-RUN npm install --include=dev
+RUN npm install
 
 EXPOSE 5173
 
