--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,8 +5,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 
-COPY src/ ./src
-COPY index.html .
+COPY . .
 RUN npm run build
 
 FROM node:18-alpine
