--- a/commits.yaml
+++ b/commits.yaml
@@ -2,4 +2,6 @@
    2. Release: Quando quiser lançar uma nova versão, execute npm run release.
    3. Publicação: Envie as mudanças para o repositório remoto: git push --follow-tags.
 
-   obs.: antes de enviar para prod , rodar para validar ---> docker-compose -f docker-compose.prod.yml up --build
+   obs.: antes de enviar para prod
+      1 - deletar node_modules
+      2 - rodar para validar ---> docker-compose -f docker-compose.prod.yml up --build
