--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,3 +32,6 @@ jobs:
       - name: Run npm audit in Docker
         run: docker run contas-frontend npm audit
         continue-on-error: true
+
+      - name: Run frontend tests in Docker
+        run: docker run contas-frontend npm run test-frontend
