--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serve": "serve -s dist -l 5173",
     "release": "standard-version",
     "release:dry-run": "standard-version --dry-run",
-    "test-connection": "node test_connection.js"
+    "test-frontend": "vitest",
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^24.0.8",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
@@ -43,11 +45,13 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "jsdom": "^24.1.1",
     "postcss": "^8.4.45",
     "standard-version": "^9.5.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vitest": "^2.0.4"
   }
 }
