--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serve": "serve -s dist -l 5173",
     "release": "standard-version",
     "release:dry-run": "standard-version --dry-run",
-    "test-frontend": "vitest",
+    "test-frontend": "vitest"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
