--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,12 +1,14 @@
-FROM node:18-alpine
-
+# Stage 1: Build the backend
+FROM node:18-alpine AS build
 WORKDIR /app
-
 COPY package*.json ./
+# Use npm ci para uma instalação mais rápida e confiável
+RUN npm ci --omit=dev
+
+# Stage 2: Create the production image
+FROM node:18-alpine
+WORKDIR /app
+COPY --from=build /app/node_modules ./node_modules
 COPY . .
-
-RUN npm install
-
 EXPOSE 3001
-
 CMD ["node", "server.js"]
