--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,14 +1,14 @@
-FROM node:18-alpine
-
+# Stage 1: Build the frontend
+FROM node:18-alpine AS build
 WORKDIR /app
-
-# Copiar apenas o necessário para instalar dependências
 COPY package*.json ./
+RUN npm install
 COPY . .
+RUN npm run build
 
-# Instalar dependências incluindo Vite
-RUN npm install --include=dev
-
-EXPOSE 5173
-
-CMD ["npm", "run", "dev"]
+# Stage 2: Serve the static files with Nginx
+FROM nginx:alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+# A configuração do Nginx será montada via docker-compose, então não precisamos copiar aqui.
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
