--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,10 +1,37 @@
 version: '3.8'
 
 services:
-  financial-app:
+  frontend:
     build:
       context: .
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile.frontend
     ports:
       - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - backend
     restart: unless-stopped
+    container_name: financial-app-frontend
+
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile.backend
+    env_file:
+      - .env
+    environment:
+      - NODE_ENV=production
+    depends_on:
+      - mongo
+    restart: unless-stopped
+    container_name: financial-app-backend
+
+  mongo:
+    image: mongo:latest
+    volumes:
+      - mongo-data:/data/db
+    restart: always
+
+volumes:
+  mongo-data:
