--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.10.0",
     "chart.js": "^4.4.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -30,6 +31,7 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
+    "react-transition-group": "^4.4.5",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "@types/node": "^24.0.8",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-transition-group": "^4.4.12",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.1",
