--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.frontend
+      target: build
     ports:
       - "5173:5173"
     volumes:
@@ -16,6 +17,7 @@ services:
       - backend
     restart: unless-stopped
     container_name: financial-app-frontend
+    command: npm run dev -- --host
 
   backend:
     build:
