--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-    environment:
-      - VITE_API_BASE_URL=http://localhost:3001/api
+    env_file:
+      - .env
     depends_on:
       - backend
     restart: unless-stopped
