--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.10.0",
     "chart.js": "^4.4.0",
@@ -24,6 +25,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.16.1",
     "react": "^18.3.1",
