fix: pin code prod

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,6 +1,12 @@
 # Stage 1: Build the frontend
 FROM node:18-alpine AS build
 WORKDIR /app
+ARG VITE_PIN_CODE
+ARG VITE_VERIFICATION_COOKIE_NAME
+ARG VITE_VERIFICATION_TIMEOUT_MS
+ENV VITE_PIN_CODE=$VITE_PIN_CODE
+ENV VITE_VERIFICATION_COOKIE_NAME=$VITE_VERIFICATION_COOKIE_NAME
+ENV VITE_VERIFICATION_TIMEOUT_MS=$VITE_VERIFICATION_TIMEOUT_MS
 COPY package*.json ./
 RUN npm install
 COPY . .
