--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
     "react-transition-group": "^4.4.5",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "node-cron": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
