NGINX updated configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,6 @@
 server {
         listen 80;
+        server_name vibecodia.com.br www.vibecodia.com.br;
         root /usr/share/nginx/html;
         index index.html;
 
@@ -16,6 +17,17 @@ server {
         location / {
             try_files $uri $uri/ /index.html;
         }
+
+        # Serve o atelie em /atelie
+        location /atelie/ {
+            alias /usr/share/nginx/html/atelie/;
+            try_files $uri $uri/ /atelie/index.html;
+        }
+	# Serve agurando vibecodia site
+	location /vibecodia/ {
+		alias /usr/share/nginx/html/vibecodia/;
+		try_files $uri $uri/ /vibecodia/index/html;
+	}
 
         # Cache static assets
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
