SITE ALIVE ON HTTPS

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,36 @@
 # -------------------------
-# VIBECODIA PRINCIPAL
+# VIBECODIA - REDIRECIONAMENTO HTTP PARA HTTPS
 # -------------------------
 server {
     listen 80;
     server_name vibecodia.com.br www.vibecodia.com.br;
+    return 301 https://$host$request_uri;
+}
 
+# -------------------------
+# VIBECODIA - CONFIGURAÇÃO PRINCIPAL HTTPS
+# -------------------------
+server {
+    listen 443 ssl;
+    server_name vibecodia.com.br www.vibecodia.com.br;
+
+    ssl_certificate /etc/letsencrypt/live/vibecodia.com.br/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/vibecodia.com.br/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
+    ssl_prefer_server_ciphers off;
+
+    # --- ALTERAÇÃO AQUI ---
     root /usr/share/nginx/html/vibecodia;
     index index.html;
 
+    location /.well-known/acme-challenge/ {
+        root /usr/share/nginx/html;
+        allow all;
+    }
+
     location / {
+        # E AQUI, PARA APONTAR PARA O INDEX CORRETO
         try_files $uri $uri/ /index.html;
     }
 
@@ -19,65 +41,76 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-
-    # Cache de arquivos estáticos
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|otf)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    # Cabeçalhos de segurança
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-
-    # Gzip
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 }
 
 # -------------------------
-# ATELIE
+# ATELIE - REDIRECIONAMENTO HTTP PARA HTTPS
 # -------------------------
 server {
     listen 80;
     server_name atelie.vibecodia.com.br;
-
-    root /usr/share/nginx/html/atelie;
-    index index.html;
-
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|otf)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
+    return 301 https://$host$request_uri;
 }
 
 # -------------------------
-# FINANCES
+# ATELIE - CONFIGURAÇÃO PRINCIPAL HTTPS
+# -------------------------
+server {
+    listen 443 ssl;
+    server_name atelie.vibecodia.com.br;
+
+    ssl_certificate /etc/letsencrypt/live/vibecodia.com.br/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/vibecodia.com.br/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
+    ssl_prefer_server_ciphers off;
+
+    # --- ALTERAÇÃO AQUI ---
+    root /usr/share/nginx/html/atelie;
+    index index.html;
+
+    location /.well-known/acme-challenge/ {
+        root /usr/share/nginx/html;
+        allow all;
+    }
+
+    location / {
+        # E AQUI, PARA APONTAR PARA O INDEX CORRETO
+        try_files $uri $uri/ /index.html;
+    }
+}
+
+# -------------------------
+# FINANCES - REDIRECIONAMENTO HTTP PARA HTTPS
 # -------------------------
 server {
     listen 80;
     server_name finances.vibecodia.com.br;
+    return 301 https://$host$request_uri;
+}
 
+# -------------------------
+# FINANCES - CONFIGURAÇÃO PRINCIPAL HTTPS
+# -------------------------
+server {
+    listen 443 ssl;
+    server_name finances.vibecodia.com.br;
+
+    ssl_certificate /etc/letsencrypt/live/vibecodia.com.br/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/vibecodia.com.br/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
+    ssl_prefer_server_ciphers off;
+
+    # ESTA CONFIGURAÇÃO ESTÁ CORRETA E FOI MANTIDA
     root /usr/share/nginx/html;
     index index.html;
 	
-    # Proxy API requests to the backend
+    location /.well-known/acme-challenge/ {
+        root /usr/share/nginx/html;
+        allow all;
+    }
+
     location /api/ {
        proxy_pass http://backend:3001/api/;
        proxy_set_header Host $host;
@@ -89,19 +122,4 @@ server {
     location / {
         try_files $uri $uri/ /index.html;
     }
-
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|otf)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 }
-
