--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,10 +11,13 @@ services:
         VITE_VERIFICATION_TIMEOUT_MS: ${VITE_VERIFICATION_TIMEOUT_MS}
     ports:
       - "80:80"
+      - "443:443"  # <-- ADICIONE ESTA LINHA
     env_file:
       - .env
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      # ADICIONE O BLOCO ABAIXO PARA OS CERTIFICADOS
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - backend
     restart: unless-stopped
@@ -28,16 +31,16 @@ services:
       - .env
     environment:
       - NODE_ENV=production
-    depends_on:
-      - mongo
+        #depends_on:
+        #- mongo
     restart: unless-stopped
     container_name: financial-app-backend
 
-  mongo:
-    image: mongo:latest
-    volumes:
-      - mongo-data:/data/db
-    restart: always
+      #mongo:
+      #image: mongo:latest
+      #volumes:
+      #- mongo-data:/data/db
+      #restart: always
 
-volumes:
-  mongo-data:
+      #volumes:
+      #mongo-data:
