--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,7 @@
+log_format vhost_combined '$server_name - $remote_addr - $remote_user [$time_local] '
+	'"$request" $status $body_bytes_sent '
+        '"$http_referer" "$http_user_agent"';
+
 # -------------------------
 # VIBECODIA - REDIRECIONAMENTO HTTP PARA HTTPS
 # -------------------------
@@ -41,6 +45,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+    
+    access_log /var/log/nginx/access.log vhost_combined;
 }
 
 # -------------------------
@@ -78,6 +84,8 @@ server {
         # E AQUI, PARA APONTAR PARA O INDEX CORRETO
         try_files $uri $uri/ /index.html;
     }
+
+    access_log /var/log/nginx/access.log vhost_combined;
 }
 
 # -------------------------
@@ -122,4 +130,6 @@ server {
     location / {
         try_files $uri $uri/ /index.html;
     }
+
+    access_log /var/log/nginx/access.log vhost_combined;
 }
